<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="16dp"
    android:paddingEnd="24dp"
    android:paddingBottom="16dp">

    <RadioGroup
        android:id="@+id/rg_reset_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- The text for this RadioButton will be set dynamically in the code -->
        <RadioButton
            android:id="@+id/rb_reset_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/white"
            android:checked="true"
            android:text="Reset current active game"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_reset_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:buttonTint="@android:color/white"
            android:text="Reset all active games"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </RadioGroup>

</LinearLayout>
