...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Opponent Name" />

    <TextView
        android:id="@+id/tv_commander_damage"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/counter_box_background"
        android:clickable="true"
        android:focusable="true"
...
        app:layout_constraintBottom_toTopOf="@+id/tv_opponent_name"
        app:layout_constraintEnd_toEndOf="@+id/tv_opponent_name"
        app:layout_constraintStart_toStartOf="@+id/tv_opponent_name"
        tools:text="0" />

    <com.example.mtglifetracker.view.ContinuousDecrementView
        android:id="@+id/iv_decrement_button"
        android:layout_width="43dp"
        android:layout_height="58dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/player_counters"
        android:padding="7dp"
        android:src="@drawable/ic_remove"
...
